--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
