[feat]: 무한스크롤 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/icon/*": ["./public/icon/*"]
+      "@/icon/*": ["./public/icon/*"],
+      "@/font/*": ["./public/font/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
