--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-
+{
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "destination": "https://assignment-todolist-api.vercel.app/api/:path*"
+    }
+  ]
+}
